# data-quality-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DELIVERABLES.md  Dockerfile  FINAL_SUMMARY.txt  INSTALLATION_SUMMARY.md  Makefile  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  quick_start.sh  requirements.txt  setup.py  test_your_json.py
.github/workflows/: analytics.yml  ci-quick.yml  data-quality-validation.yml
config/: openweather_clean_validation.yaml  openweather_raw_validation.yaml
data/: example_data.json
docs/: ARCHITECTURE.md  INTEGRATION_GUIDE.md  PROJECT_STATUS.md
examples/: lakehouse_integration_example.py  openweather_examples.py
monitoring/: prometheus.yml
src/data_quality_framework/: __init__.py  api.py  base.py  cli.py  config_loader.py  database.py  exceptions.py  orchestrator.py  validators.py
terraform/: README.md  alb.tf  iam.tf  monitoring.tf  outputs.tf  provider.tf  rds.tf  user_data.sh  variables.tf  vpc.tf
terraform/environments/: dev.tfvars  prod.tfvars  staging.tfvars
tests/: __init__.py  test_api.py  test_cli.py  test_database.py  test_orchestrator.py  test_validators.py
